# McGill_Interview_Warren_Gross

./: README.md  cursor_context.md
llama-quantization/: .gitignore  Dockerfile  NOTES_AND_PLAN.md  README.md  benchmark.py  config.py  env.example  main.py  modal_app.py  quantize.py  requirements.txt  run.sh  setup_modal.py  visualize.py
llama-quantization/design_report/: 01_GLOSSARY.md  02_ARCHITECTURE.md  03_DESIGN_CHOICES.md  04_CODE_WALKTHROUGH.md  05_RESULTS_SUMMARY.md
llama-quantization_hand_written_refactor/: docker-compose.yaml  evaluate.py  main.py  modal_app.py  pyproject.toml  quantize.py  requirements.txt  sweep.py
llama-quantization_hand_written_refactor/cli/: __init__.py  main.py
llama-quantization_hand_written_refactor/design_report/: 04_CODE_WALKTHROUGH.md  05_RESULTS_SUMMARY.md
llama-quantization_hand_written_refactor/experiments/: bnb_4bit_fp4.yaml  bnb_4bit_nf4.yaml  fp16_baseline.yaml  gptq_4bit.yaml
llama-quantization_hand_written_refactor/experiments/sweep_configs/: ablation_double_quant.yaml
llama-quantization_hand_written_refactor/infra/: __init__.py  modal_app.py
llama-quantization_hand_written_refactor/infra/docker/: Dockerfile
llama-quantization_hand_written_refactor/reports/report1/: main.bbl  main.out
llama-quantization_hand_written_refactor/reports/report1/sections/: discussion.tex  results.tex
llama-quantization_hand_written_refactor/reports/report2/: main.aux  references.bib
llama-quantization_hand_written_refactor/reports/report2/sections/: discussion.tex  methods.tex  results.tex
llama-quantization_hand_written_refactor/reports/report3/: main.bbl  main.tex
llama-quantization_hand_written_refactor/reports/report3/sections/: discussion.tex
llama-quantization_hand_written_refactor/reports/report4/: Makefile  main.out
llama-quantization_hand_written_refactor/reports/report4/sections/: methods.tex  results.tex
llama-quantization_hand_written_refactor/research_sessions/: research_log.md
llama-quantization_hand_written_refactor/src/llama_quant/: __init__.py
llama-quantization_hand_written_refactor/src/llama_quant/benchmark/: __init__.py  latency.py  memory.py  runner.py  throughput.py
llama-quantization_hand_written_refactor/src/llama_quant/core/: __init__.py  config.py
llama-quantization_hand_written_refactor/src/llama_quant/evaluation/: __init__.py  coqa.py  harness.py
llama-quantization_hand_written_refactor/src/llama_quant/utils/: __init__.py  logging.py  serialization.py
llama-quantization_hand_written_refactor/tests/: __init__.py
llama-quantization_hand_written_refactor/tests/test_core/: test_config.py
llama_rewrite_2/: .gitignore
llama_rewrite_3/: README.md
(+114 files in other folders)
